[package]
name = "esme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.204", features = ["derive"] }
log = "0.4.22"
log4rs = "1.2"
env_logger = "0.11.4"
config = "0.14.0"
chrono = "0.4.38"
uuid = { version = "1.10.0", features = ["v4"] }
sqlx = { version = "0.6", features = ["mysql",  "runtime-actix-rustls"] }
once_cell = "1.19.0"
tantivy = "0.22.0"  # or the latest version
lazy_static = "1.4"
regex = "1.10.5"
parking_lot = "0.12.3"
dashmap = "6.0.1"
crossbeam-channel = "0.5.13"
crossbeam = "0.8.4"
num_cpus = "1.16.0"
thiserror = "1.0.63"  # or the latest version
std-semaphore = "^0.1.0"